--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@
 # platform: osx-64
 autopep8=1.6.0=pyhd3eb1b0_0
 brotlipy=0.7.0=py37h9ed2024_1003
-ca-certificates=2021.10.26=hecd8cb5_2
-certifi=2021.10.8=py37hecd8cb5_0
+ca-certificates=2021.10.8=h033912b_0
+certifi=2021.10.8=py37hf985489_1
 cffi=1.14.6=py37h2125817_0
 charset-normalizer=2.0.4=pyhd3eb1b0_0
 cryptography=36.0.0=py37hf6deb26_0
@@ -17,13 +17,15 @@ libxml2=2.9.12=hcdb78fc_0
 libxslt=1.1.34=h83b36ba_0
 lxml=4.6.4=py37h7a1b463_0
 ncurses=6.3=hca72f7f_2
-openssl=1.1.1l=h9ed2024_0
+openssl=1.1.1l=h0d85af4_0
+peewee=3.14.8=py37hcec9960_1
 pip=21.2.2=py37hecd8cb5_0
 pycodestyle=2.8.0=pyhd3eb1b0_0
 pycparser=2.21=pyhd3eb1b0_0
 pyopenssl=21.0.0=pyhd3eb1b0_1
 pysocks=1.7.1=py37hecd8cb5_0
 python=3.7.11=h88f2d9e_0
+python_abi=3.7=2_cp37m
 readline=8.1=h9ed2024_0
 requests=2.26.0=pyhd3eb1b0_0
 setuptools=58.0.4=py37hecd8cb5_0
